--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/typography": "^0.5.7",
     "groq": "^2.33.2",
     "next": "12.2.5",
     "react": "18.2.0",
